Agregué in-line block en fieldset de contacto

--- a/-23009/contacto.html
+++ b/-23009/contacto.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <title>Formulario de Consulta</title>
 </head>
+
 <body>
     <header>
         <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
@@ -16,7 +17,9 @@
 
 <form action="/action_page.php">
  <fieldset>
+<div>
   <legend>Campos para consulta:</legend>
+</div>
   <label for="fname">Nombre:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lname">Apellido:</label>
