agregué el action para formspreeio

--- a/-23009/contacto.html
+++ b/-23009/contacto.html
@@ -15,7 +15,7 @@
     </header>
     <h1>Formulario</h1>
 
-<form action="/action_page.php">
+<form action="https://formspree.io/f/xknaekow" method="POST">
  <fieldset>
 <div>
   <legend>Campos para consulta:</legend>
