--- a/-23009/contacto.html
+++ b/-23009/contacto.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/contacto.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <title>Formulario de Consulta</title>
 </head>
 
 <body>
-    <header>
-        <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
-    </header>
+  <header> 
+    <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
+    <nav class="header-menubar">
+       <ul>
+           <li><a href="index.html" class="button">Inicio</a></li>
+           <li><a href="softwares.html" class="button">Softwares</a></li>
+           <li><a href="noticias.html" class="button">Noticias</a></li>
+           <li><a href="contacto.html" class="button">Contacto</a></li>
+       </ul>
+    </nav>
+</header>
     <h1>Formulario</h1>
 
 <form action="https://formspree.io/f/xknaekow" method="POST">
@@ -33,6 +41,22 @@
   <input type="submit" value="Enviar">
  </fieldset>
 </form>
+<footer>
+        
+  <div>
+      <p>Derechos reservados &copy; 2023 SOFTWARE CENTER</p>
+    </div>
+    <div class="footer">
+      <ul>
+        <li><a href="index.html" class="button">Inicio</a></li>
+        <br>
+        <li><a href="softwares.html" class="button">Acerca de</a></li>
+        <br>
+        <li><a href="contacto.html" class="button">Contactanos</a></li>
+      </ul>
+    </div>
+  
+</footer>
 
     
 </body>
