--- a/-23009/contacto.html
+++ b/-23009/contacto.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <h1 class="text">Software Center</h1>
   <header> 
     <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
     <nav class="header-menubar">
@@ -21,7 +22,6 @@
        </ul>
     </nav>
 </header>
-    <h1>Formulario</h1>
 
 <form action="https://formspree.io/f/xknaekow" method="POST">
  <fieldset>
