--- a/-23009/noticias.html
+++ b/-23009/noticias.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Software Center</h1>
+    <h1 class="title">Software Center</h1>
 
     <header> 
          <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
