--- a/-23009/softwares.html
+++ b/-23009/softwares.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-    <h1>Software Center</h1>
+    <h1 class="title">Software Center</h1>
 
     <header> 
          <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
