--- a/-23009/index.html
+++ b/-23009/index.html
@@ -15,14 +15,14 @@
 
     <header> 
          <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
-         <nav class="header-menubar">
-            <ul>
-                <li><a href="index.html" class="button">Inicio</a></li>
-                <li><a href="softwares.html" class="button">Softwares</a></li>
-                <li><a href="noticias.html" class="button">Noticias</a></li>
-                <li><a href="contacto.html" class="button">Contacto</a></li>
-            </ul>
-         </nav>
+             <nav class="header-menubar">
+                 <ul>
+                     <li><a href="index.html" class="button">Inicio</a></li>
+                     <li><a href="softwares.html" class="button">Softwares</a></li>
+                     <li><a href="noticias.html" class="button">Noticias</a></li>
+                     <li><a href="contacto.html" class="button">Contacto</a></li>
+                  </ul>
+             </nav>
     </header>
     <main>
          <div class="contenido-principal">
@@ -37,21 +37,20 @@
 
             </section>
             <section class="secciones">
-                <article>
                     <img src="" alt="">
-                    <div>
+                     <div>
                         <h3>Empresas de Software</h3>
                         <p>Apple, Microsoft, Google, Facebook o Adobe son algunas de las empresas más poderosas del mundo. Todas ellas tienen algo en común: están relacionadas, de una forma u otra, con el desarrollo y distribución de software o programas informáticos. Y es que la industria del software se ha convertido en una de las más importantes en las últimas décadas. Sin ir más lejos, el gasto mundial en software crecerá un 11,5% en 2022, alcanzando la cifra de casi 670.000 millones de dólares. 
                            <br> A pesar de que se usa a diario, muchas personas no tienen en cuenta que el software se ha convertido en una pieza fundamental en el actual modo de vida, ya sea en el plano personal o laboral, ya que es quien habilita la posibilidad de utilizar de manera sencilla todos los dispositivos que nos facilitan la vida.A pesar de que se usa a diario, muchas personas no tienen en cuenta que el software se ha convertido en una pieza fundamental en el actual modo de vida, ya sea en el plano personal o laboral, ya que es quien habilita la posibilidad de utilizar de manera sencilla todos los dispositivos que nos facilitan la vida. Si quieres saber más sobre esta temática, en este artículo, te explicaremos qué es el software con ejemplos que reconocerás de forma rápida.
                         </p>
-                    </div>
-                </article>
+                     </div>
             </section>
          </div>
          <aside class="contenido">
             <div class="tenor-gif-embed" data-postid="24712790" data-share-method="host" data-aspect-ratio="1.33333" data-width="100%"><a href="https://tenor.com/view/software-software-development-gif-24712790">Software Software Development GIF</a>from <a href="https://tenor.com/search/software-gifs">Software GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
          </aside>
          <div>
+            <section class="secciones">
             <h2>Proceso de creación del software</h2>
             <p>Se define como «proceso» al conjunto ordenado de pasos a seguir para llegar a la solución de un problema u obtención de un producto, en este caso particular, para lograr un producto software que resuelva un problema específico.
 
@@ -72,6 +71,7 @@
                 Es común para el desarrollo de software de mediano porte que los equipos humanos involucrados apliquen «metodologías propias», normalmente un híbrido de los procesos anteriores y a veces con criterios propios.15​
                 
                 El proceso de desarrollo puede involucrar numerosas y variadas tareas,13​ desde lo administrativo, pasando por lo técnico y hasta la gestión y el gerenciamiento. Pero, casi rigurosamente, siempre se cumplen ciertas etapas mínimas</p>
+            </section>
          </div>
     </main>
 
@@ -84,9 +84,7 @@
           <div class="footer">
             <ul>
               <li><a href="index.html" class="button">Inicio</a></li>
-              <br>
               <li><a href="softwares.html" class="button">Acerca de</a></li>
-              <br>
               <li><a href="contacto.html" class="button">Contactanos</a></li>
             </ul>
           </div>
