--- a/-23009/index.html
+++ b/-23009/index.html
@@ -74,7 +74,10 @@
             </section>
          </div>
     </main>
-
+    <div class="whatsapp-logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/640px-WhatsApp_icon.png" alt="WhatsApp Logo">
+      </div>
+      
 
     <footer>
         
