--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          </div>
     </main>
     <div class="whatsapp-logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/640px-WhatsApp_icon.png" alt="WhatsApp Logo">
+       <a href="https://wa.me/542236920321"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/640px-WhatsApp_icon.png" alt="WhatsApp Logo"></a>
       </div>
       
 
