--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
          <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
-         <div class="contenedor">
+         <div class="contenedor"></div>
             <input type="checkbox" id="menu-check">
             <label id="menu" for="menu-check">
                 <span id="menu-abrir">&#9776</span>
