--- a/softwares.html
+++ b/softwares.html
@@ -15,6 +15,12 @@
 
     <header> 
          <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
+         <div class="contenedor">
+            <input type="checkbox" id="menu-check">
+            <label id="menu" for="menu-check">
+                <span id="menu-abrir">&#9776</span>
+                <span id="menu-cerrar">X</span>
+            </label>
          <nav class="header-menubar">
             <ul>
                 <li><a href="index.html" class="button">Inicio</a></li>
@@ -23,6 +29,7 @@
                 <li><a href="contacto.html" class="button">Contacto</a></li>
             </ul>
          </nav>
+        </div>
     </header>
     <main>
          <div class="contenido-principal">
