--- a/contacto.html
+++ b/contacto.html
@@ -12,8 +12,13 @@
 
 <body>
   <h1 class="title">Software Center</h1>
-  <header> 
     <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
+    <div class="contenedor">
+      <input type="checkbox" id="menu-check">
+      <label id="menu" for="menu-check">
+        <span id="menu-abrir">&#9776</span>
+        <span id="menu-cerrar">X</span>
+      </label>
     <nav class="header-menubar">
        <ul>
            <li><a href="index.html" class="button">Inicio</a></li>
@@ -22,6 +27,7 @@
            <li><a href="contacto.html" class="button">Contacto</a></li>
        </ul>
     </nav>
+  </div>
 </header>
     
 
