--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,7 @@
 
 <body>
   <h1 class="title">Software Center</h1>
+  <header>
     <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
     <div class="contenedor">
       <input type="checkbox" id="menu-check">
@@ -27,7 +28,7 @@
            <li><a href="contacto.html" class="button">Contacto</a></li>
        </ul>
     </nav>
-  </div>
+    </div>
 </header>
     
 
