--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 
     <header>
          <div class="header-logo"><a href="index.html"><img src="imagenes/logosoft.jpg" alt=""></a></div>
-         <div class="contenedor"></div>
+         <div class="contenedor">
             <input type="checkbox" id="menu-check">
             <label id="menu" for="menu-check">
                 <span id="menu-abrir">&#9776</span>
                 <span id="menu-cerrar">X</span>
             </label>
-            <nav class="header-menubar">
-                 <ul>
-                     <li><a href="index.html" class="button">Inicio</a></li>
-                     <li><a href="softwares.html" class="button">Softwares</a></li>
-                     <li><a href="noticias.html" class="button">Noticias</a></li>
-                     <li><a href="contacto.html" class="button">Contacto</a></li>
-                  </ul>
-             </nav>
+         <nav class="header-menubar">
+             <ul>
+                <li><a href="index.html" class="button">Inicio</a></li>
+                <li><a href="softwares.html" class="button">Softwares</a></li>
+                <li><a href="noticias.html" class="button">Noticias</a></li>
+                <li><a href="contacto.html" class="button">Contacto</a></li>
+             </ul>
+         </nav>
          </div>
     </header>
 
