Agrego texto a la pagina Softwares

--- a/softwares.html
+++ b/softwares.html
@@ -52,6 +52,27 @@
                          </ul>
                       </p>
                     </div>
+                    <div>
+                        <p>
+                            Software de programación:
+
+La importancia del software de programación radica en que hace posible el desarrollo de aplicaciones, por lo que su función es elemental para el desarrollo de la informática y los diferentes programas. Dentro de esta categoría encontramos como ejemplos los editores de texto o compiladores.
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            Software de sistema:
+
+El software de sistema es indispensable para que el hardware funcione de manera idónea. Los componentes del ordenador ejecutan su labor gracias a esta herramienta: desde los drivers a los periféricos u otros elementos como teclado o disco duro. A modo de ejemplo, se pueden citar los sistemas operativos Windows o Mac. Su importancia radica, a su vez, en que establece la conexión entre usuario y máquina u ordenador, facilitando las tareas vinculadas al mismo. 
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            Software de Aplicación:
+
+El software de aplicación, es aquel que utilizamos día a día, cada uno de los programas, aplicaciones o utilidades que manejamos dentro de nuestra computadora, entran dentro de esta clasificación de software, es el resultado de la programación de software, enfocado hacia alguno de los sistemas operativos, como puedes ver es el tercer y último paso, hablando de forma técnica es el software diseñado para el usuario final.
+                        </p>
+                    </div>
                 </article>
             </section>
          </div>
